--- a/_translations/gui.en.yml
+++ b/_translations/gui.en.yml
@@ -1,28 +1,20 @@
-Phlexible:
-    strings:
-        googlemaps:
-            component:
-                name: Google Maps
-                description: Google Maps
-        
-            address: Address
-            coordinates: Coordinates
-        
-            street: Street
-            number: Number
-            district: District
-            postal: Postal
-            city: City
-            region: Region
-            state: State
-            country: Country
-        
-            latitude: Latitude
-            longitude: Longitude
-        
-            query: Query
-            query_by_address: Query by address
-            query_by_coordinates: Query by coordinates
-        
-            update: Update
-            cancel: Cancel
+googlemaps:
+    component_description: 'Component to provide a Google Maps API-Key and static Google Maps-Images.'
+    component_name: Googlemaps
+    address: Address
+    coordinates: Coordinates
+    street: Street
+    number: Number
+    district: District
+    postal: Postal
+    city: City
+    region: Region
+    state: State
+    country: Country
+    latitude: Latitude
+    longitude: Longitude
+    query: Query
+    query_by_address: 'Query by address'
+    query_by_coordinates: 'Query by coordinates'
+    update: Update
+    cancel: Cancel
