--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "phlexible/google-maps-component",
-    "description": "phlexible.cms google maps component",
+    "name": "phlexible/google-maps-bundle",
+    "description": "phlexible google maps bundle",
     "license": "proprietary",
+	"type": "symfony-bundle",
     "autoload": {
-        "psr-4": { 
-            "Phlexible\\GoogleMapsComponent\\": ""
+        "psr-4": {
+            "Phlexible\\GoogleMapsBundle\\": ""
         }
     },
     "require": {
@@ -14,7 +15,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://packages.brainbits.net/phlexible-components/"
+            "url": "https://packages.brainbits.net/phlexible-bundles/"
         }
     ],
     "minimum-stability": "stable"
