--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"type": "symfony-bundle",
     "autoload": {
         "psr-4": {
-            "Phlexible\\GoogleMapsBundle\\": ""
+            "Phlexible\\Bundle\\GoogleMapsBundle\\": ""
         }
     },
     "require": {
