--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         "php": ">=5.3.0",
         "ext-json": "*"
     },
+    "require-dev": {
+        "phlexible/gui-bundle": "~1.0",
+        "phpunit/phpunit": "~4.5"
+    },
     "repositories": [
         {
             "type": "composer",
