--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://packages.brainbits.net/repo/private/",
-            "options": {
-                "ssl": {
-                    "allow_self_signed": "true"
-                }
-            }
+            "url": "https://packages.brainbits.net/repo/private/"
         }
     ],
     "extra": {
